--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
+
 {
   "name": "guttenberg-search",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Source code for ElasticSearch tutorial using 100 classic open source books.",
   "scripts": {
-    "start": "node --inspect=0.0.0.0:9229 server/app.js"
+    "start": "node server/app.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,7 @@
   },
   "homepage": "https://github.com/triestpa/guttenberg-search#readme",
   "dependencies": {
-    "elasticsearch": "13.3.1",
+    "@elastic/elasticsearch": "^8.11.0",
     "joi": "13.0.1",
     "koa": "2.4.1",
     "koa-joi-validate": "0.5.1",
@@ -28,5 +29,9 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16",
+    "npm": ">=8"
   }
 }
