--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,15 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "server/app.js"
     }
-  ]
+  ],
+  "static": {
+    "public": "public"
+  }
 }
