--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@elastic/elasticsearch": "^8.11.0",
     "joi": "13.0.1",
     "koa": "2.4.1",
+    "koa-static": "^5.0.0",
     "koa-joi-validate": "0.5.1",
     "koa-router": "7.2.1"
   },
