--- a/vercel.json
+++ b/vercel.json
@@ -28,12 +28,8 @@
       "dest": "/public/$1"
     },
     {
-      "src": "/search.html",
-      "dest": "/public/search.html"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/public/index.html"
+      "dest": "server/app.js"
     }
   ]
 }
