--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "homepage": "https://github.com/triestpa/guttenberg-search#readme",
   "dependencies": {
-    "@elastic/elasticsearch": "^7.17.0",
-    "joi": "13.0.1",
-    "koa": "2.4.1",
-    "koa-static": "^5.0.0",
-    "koa-joi-validate": "0.5.1",
-    "koa-router": "7.2.1"
-  },
+  "@elastic/elasticsearch": "7.17.0",
+  "joi": "13.0.1",
+  "koa": "2.4.1",
+  "koa-static": "^5.0.0",
+  "koa-joi-validate": "0.5.1",
+  "koa-router": "7.2.1"
+}
   "devDependencies": {
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
