--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/triestpa/guttenberg-search/issues"
   },
-  "homepage": "https://github.com/triestpa/guttenberg-search#readme",
+  "homepage": "https://github.com/jcarpio/transcript-search/",
   "dependencies": {
   "@elastic/elasticsearch": "7.17.0",
   "joi": "13.0.1",
@@ -22,7 +22,7 @@
   "koa-static": "^5.0.0",
   "koa-joi-validate": "0.5.1",
   "koa-router": "7.2.1"
-}
+},
   "devDependencies": {
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
